fixed background display problem on ios devices

--- a/frontend/src/app/containers/Home/style.scss
+++ b/frontend/src/app/containers/Home/style.scss
@@ -1,13 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 .home {
-  height: 100%;
-  width: 100%;
-  background: url('../../../assets/background.jpg') no-repeat center center fixed;
+  background: url('../../../assets/background.png');
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 100%;
 
   a {
   	text-decoration: none;
